# leetcode-rs

./: .commitlintrc.yml  .gitignore  .lycheeignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  deny.toml  index.html  spellcheck.dic
.github/: dependabot.yml
.github/actions/basics/: action.yml
.github/actions/elapsed-time/: action.yml
.github/actions/install-from-tarball/: action.yml
.github/actions/setup-node-cache-action/: action.yml  package-lock.json  package.json
.github/templates/: metrics_template.json
.github/workflows/: benchmarks.yml  ci.yml  links.yml  pr-cargo-deny.yml  pr.yml  test_push.yml
docs/: Grafana_tag_issue.md  criterion_args.md
implementations/q1248_count_num_of_nice_subarrays/: Cargo.toml
implementations/q1248_count_num_of_nice_subarrays/src/: impl_v1.rs  lib.rs
implementations/q1248_count_num_of_nice_subarrays/tests/: test_all_impl.rs
implementations/q146_lru_cache/: Cargo.toml
implementations/q146_lru_cache/benches/: bench_all_impl.rs  bench_intrusive_two_hashmaps.rs  bench_priority_queue.rs  bench_two_hashmaps.rs  bench_vec_hashmap.rs
implementations/q146_lru_cache/benches/modules/: bench_common.rs  mod.rs
implementations/q146_lru_cache/src/: heap_node.rs  impl_intrusive_two_hashmaps.rs  impl_priority_queue.rs  impl_two_hashmaps.rs  impl_v1.rs  impl_v2.rs  impl_v4.rs  impl_vec_hashmap.rs  lib.rs  priority_queue.rs  test_common.rs  vec_hashmap.rs
implementations/q146_lru_cache/src/utils/: mod.rs  test_common.rs
implementations/q146_lru_cache/tests/: proptest.rs  test_all_impl.rs
implementations/q1574_shortest_subarray_to_be_removed_to_make_array_sorted/: Cargo.toml
implementations/q1574_shortest_subarray_to_be_removed_to_make_array_sorted/src/: impl_v1.rs  impl_v2.rs  impl_v3.rs  lib.rs
implementations/q1574_shortest_subarray_to_be_removed_to_make_array_sorted/tests/: test_all_impl.rs
implementations/q1829_maximum_xor_for_each_query/: Cargo.toml
implementations/q1829_maximum_xor_for_each_query/src/: impl_v1.rs
implementations/q1829_maximum_xor_for_each_query/tests/: test_all_impl.rs
implementations/q1_two_sum/: Cargo.toml
implementations/q1_two_sum/src/: impl_v1.rs
implementations/q1_two_sum/tests/: test_all_impl.rs
implementations/q2_add_two_numbers/: Cargo.toml
implementations/q2_add_two_numbers/src/: impl_v1.rs  impl_v2.rs
implementations/q2_add_two_numbers/tests/: test_all_impl.rs
implementations/q42_trapping_rain_water/: Cargo.toml
implementations/q42_trapping_rain_water/src/: impl_v1.rs  impl_v2.rs  lib.rs
implementations/q42_trapping_rain_water/tests/: test_all_impl.rs
implementations/q460_lfu_cache/: Cargo.toml
implementations/q460_lfu_cache/benches/: bench_all_impl.rs  bench_intrusive_two_hashmaps.rs  bench_priority_queue.rs  bench_two_hashmaps.rs  bench_vec_hashmap.rs
implementations/q460_lfu_cache/src/: freq_aware_heap_node.rs  heap_node.rs  impl_v1.rs  impl_v2.rs  impl_v3.rs  impl_v4.rs  intrusive_two_hashmaps.rs  lib.rs  priority_queue.rs  vec_hashmap.rs
implementations/q460_lfu_cache/tests/: proptest.rs  test_all_impl.rs
implementations/q88_merge_sorted_array/: Cargo.toml
implementations/q88_merge_sorted_array/src/: impl_v1.rs  impl_v2.rs  impl_v3.rs  lib.rs
implementations/q88_merge_sorted_array/tests/: test_all_impl.rs
utilities/: cleanup.sh  init.sh  pre-commit  pre_commit.sh
utilities/bench_util/: Cargo.toml
utilities/bench_util/src/: main.rs
utilities/bench_util/src/modules/: args.rs  constants.rs  dashboard.rs  db.rs  mod.rs
utilities/cache_util/: Cargo.toml
utilities/cache_util/src/: cache.rs  cache_operation.rs  generic_cache.rs  lib.rs  macros.rs  variables_range.rs
utilities/cache_util/src/cache_storage/: hashmap.rs  mod.rs  traits.rs
utilities/cache_util/src/eviction_policy/: mod.rs  priority_queue.rs  traits.rs  vec_hashmap.rs
utilities/cache_util/src/heap_node/: key_aware.rs  lfu.rs  lru.rs  mod.rs  traits.rs  value_aware.rs
utilities/cache_util/src/mock/: cache_operation.rs  mod.rs  operations_range.rs
utilities/checker_util/: Cargo.toml
utilities/checker_util/src/: check_yaml.rs  main.rs
