[workspace]
members = ["implementations/*", "utilities/bench_util", "utilities/cache_util"]

# tells Cargo to use the newer dependency resolver,
# which aligns with Rust 2024 edition and ensures compatibility with its features
resolver = "2"

[workspace.metadata.spellcheck]
config = "spellcheck.toml"

[profile.release] # bench will use it if no [profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
