[package]
name = "q146_lru_cache"
version = "0.1.0"
edition = "2021"

[dependencies]
priority-queue = "2.1.1"
intrusive-collections = "0.9.7"

[dev-dependencies]
rstest = "0.23.0"
proptest = "1.5.0"
once_cell = "1.20.2"
rand = "0.8.5"
criterion = "0.5.1"

[[bench]]
name = "bench_all_impl"
harness = false # Disables the default Rust benchmarking harness so that Criterion can use its own.
