[package]
name = "q146_lru_cache"
version = "0.1.0"
edition = "2021"

[dependencies]
priority-queue = "2.1.1"
intrusive-collections = "0.9.7"

[dev-dependencies]
rstest = "0.23.0"
proptest = "1.5.0"
once_cell = "1.20.2"
rand = "0.8.5"
criterion = "0.5.1"

[lib]
# specially for Criterion
# without this option, cargo bench will fail by commands like this:
#    cargo bench -p q146_lru_cache -- --verbose  # error: Unrecognized option: 'verbose'
bench = false
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options

[[bench]]
name = "bench_all_impl"
harness = false # Disables the default Rust benchmarking harness so that Criterion can use its own.
