[package]
name = "q146_lru_cache"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
priority-queue = "2.1.1"
intrusive-collections = "0.9.7"
rand = "0.8.5"
proptest = "1.5.0"
mockall = "0.13.1"
cache_util = { path = "../../utilities/cache_util" }

[dev-dependencies]
rstest = "0.23.0"
once_cell = "1.20.2"
criterion = "0.5.1"
paste = "1.0.15"

[lib]
# specially for Criterion
# without this option, cargo bench will fail by commands like this:
#    cargo bench -p q146_lru_cache -- --verbose  # error: Unrecognized option: 'verbose'
bench = false
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options

[[bench]]
name = "bench_priority_queue"
harness = false               # Disables the default Rust benchmarking harness so that Criterion can use its own.

[[bench]]
name = "bench_vec_hashmap"
harness = false            # Disables the default Rust benchmarking harness so that Criterion can use its own.

[[bench]]
name = "bench_two_hashmaps"
harness = false             # Disables the default Rust benchmarking harness so that Criterion can use its own.

[[bench]]
name = "bench_intrusive_two_hashmaps"
harness = false                       # Disables the default Rust benchmarking harness so that Criterion can use its own.
