[package]
name = "q460_lfu_cache"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
priority-queue = "2.1.1"
intrusive-collections = "0.9.7"
cache_util = { path = "../../utilities/cache_util", version = "0.1.0" }

[dev-dependencies]
rstest = "0.23.0"
proptest = "1.5.0"
once_cell = "1.20.2"
rand = "0.8.5"
criterion = "0.5.1"
paste = "1.0.15"

[[bench]]
name = "bench_all_impl"
harness = false         # Disables the default Rust benchmarking harness so that Criterion can use its own.
