[package]
name = "bench_util"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
walkdir = "2.5.0"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["serde", "alloc"] }
anyhow = "1.0.93"
